[package]
name = "ag-lcd-async"
version = "0.3.0"
authors = ["Michael House <mjhouse@protonmail.com>"]
keywords = [ "arduino", "lcd", "HD44780", "LiquidCrystal", "i2c" ]
categories = ["embedded","hardware-support"]
description = "A rust port of the LiquidCrystal arduino library"
repository = "https://github.com/filipton/ag-lcd-async"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"
exclude = ["media/*", "references/*"]

[dependencies]
embedded-hal = "1.0.0"
port-expander = { version = "0.6.4", optional = true }
embedded-hal-async = "1.0.0"

[features]
deafult = ["i2c"]
i2c = ["port-expander"]

[package.metadata.docs.rs]
features = ["i2c"]
